kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mojang-proxy-service
  labels:
    app: mojang-proxy
spec:
  ports:
  - port: 8000
    protocol: TCP
  selector:
    app: mojang-proxy
