kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mojang-proxy-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - mojang.slne.dev
      secretName: mojang-slne-dev
  rules:
    - host: mojang.slne.dev
      http:
        paths:
          - backend:
              serviceName: mojang-proxy-service
              servicePort: 8000
